@@ -7,7 +7,6 @@
 #endif
 
 
-
 #if defined (__GLIBC__) && defined(__LCLINT__)
 /*@-declundef@*/
 /*@unchecked@*/
@@ -54,9 +53,17 @@ char *alloca ();
 #include <unistd.h>
 #endif
 
+
+#if !defined(__GNUC__) && !defined(__attribute__)
+#define __attribute__(x)
+#endif
+#define UNUSED(x) x __attribute__((__unused__))
+
+
 #ifdef _MSC_VER
 #  define inline __inline
 #endif
+
 
 #if defined(_MSC_VER) || defined(__MINGW32__)
 #define _CRT_SECURE_NO_WARNINGS 1
@@ -72,6 +79,10 @@ char *alloca ();
 #define S_ISUID 00040000
 #define S_ISGID 00020000
 #define S_ISVTX 00010000
+
+/* I haven't discovered a better way to work around these format
+   specifier problems */
+#define LONG_LONG_FORMAT "I64d"
 
 
 /* CHECKME */
@@ -112,17 +123,22 @@ typedef int ssize_t;
 #define lseek _lseek
 
 /* Pretend to be root to replace these */
-static inline int setuid(int x) { return 1; }
+static inline int setuid(UNUSED(int x)) { return 1; }
 
 static inline int getuid(void) { return 0; }
 
-static inline int seteuid(int x) { return 1; }
+static inline int seteuid(UNUSED(int x)) { return 1; }
 static inline int geteuid(void) { return 0; }
 
-static inline int setgid(int x) { return 1; }
+static inline int setgid(UNUSED(int x)) { return 1; }
 static inline int getgid(void) { return 0; }
 
-static inline int setegid(int x) { return 1; }
+static inline int setegid(UNUSED(int x)) { return 1; }
+
+
+#else
+
+#define LONG_LONG_FORMAT "lld"
 
 #endif /* defined(_MSC_VER) || defined(__MINGW32__) */
 
@@ -186,12 +202,7 @@ static inline char * stpcpy (char *dest, const char * src) {
 #define	getenv(_s)	__secure_getenv(_s)
 #endif
 
-#if !defined(__GNUC__) && !defined(__attribute__)
-#define __attribute__(x)
-#endif
-#define UNUSED(x) x __attribute__((__unused__))
-
 /* Include configmake.h autogenerated from Makefile.am */
-
 #include "configmake.h"
 #include "popt.h"
+
